@@ -3,10 +3,11 @@ Encoding=UTF-8
 Name=Smalltalk YX
 Comment=Smalltalk-80 language implementation
 Comment[it]=Implementazione del linguaggio Smalltalk-80
+Comment[de]=Implementation der Sprache Smalltalk-80
 Exec=syx %F
 Icon=syx.png
 Terminal=true
 Type=Application
-Categories=Application;Development;
+Categories=Development;GTK;ConsoleOnly;
 StartupNotify=true
 MimeType=application/x-syx-file;
