@@ -3,10 +3,12 @@ Encoding=UTF-8
 Name=Smalltalk YX Image File
 Comment=Smalltalk-80 language implementation
 Comment[it]=Implementazione del linguaggio Smalltalk-80
+Comment[de]=Implementation der Sprache Smalltalk-80
 Exec=syx -i %F
 Icon=syx.png
 Terminal=true
 Type=Application
-Categories=Application;Development;
+Categories=Development;GTK;ConsoleOnly;
+NoDisplay=true
 StartupNotify=true
 MimeType=application/x-syx-image;
